# snake-app-desktop-using-rust-with-dioxus

./: Cargo.toml  Dioxus.toml  README.md
assets/: main.css
src/: Score.rs  app.rs  direction.rs  display_grid.rs  game_logic.rs  grid.rs  lib.rs  main.rs
