[package]
name = "snake-app-desktop"
version = "0.1.0"
authors = ["thota"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

dioxus = { version = "0.5", features = ["desktop"] }

wasm-bindgen = "0.2"
web-sys = "0.3"
log = "0.4"
rand = "0.8.5"
tokio = { version = "1.16.1", default-features = false, features = [
    "sync",
    "macros",
    "io-util",
    "rt",
    "time"
] }
chrono = "0.4"
getrandom = { version = "0.2.15", features = ["js"] }
queues = "1.0.2"

# Debug
tracing = "0.1.40"
dioxus-logger = "0.5.0"
